<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TravelAgent</string>
    <string name="AgtFirstName">Agent First Name</string>
    <string name="AgtID">Agent ID</string>
    <string name="AgtLastName">Agent Last Name</string>
    <string name="AgtMiddleInitial">Agent Middle Initial</string>
    <string name="AgtBusPhone">Agent Business Phone</string>
    <string name="AgtEmail">Agent Email</string>
</resources>